<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:weightSum="11"
        android:background="@color/backgroundColor">

        <android.support.v4.view.ViewPager
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_pager_view_pager_portrait_height"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".ScreenSlidePagerActivity"
            tools:showIn="@layout/activity_screen_slide_pager_activity"
            android:background="@color/textColor"/>

        <com.viewpagerindicator.CirclePageIndicator
            android:id="@+id/titles"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:padding="@dimen/imageFragment_selector_padding"
            android:background="@color/backgroundColor"
            app:fillColor="@color/imageFragment_pageSelector_fill__color"
            app:pageColor="@color/imageFragment_pageSelector_page__color"
            app:strokeColor="@color/imageFragment_pageSelector_stroke__color"/>

        <TextView
            android:id="@+id/detailedTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/pager_title"
            android:textColor="@color/view_pager_title_textColor"
            android:layout_marginLeft="@dimen/view_pager_title_marginLeft"
            android:layout_marginTop="@dimen/view_pager_title_marginTop"
            android:textSize="@dimen/view_pager_title_size"
            android:textStyle="bold"/>

            <TextView
                android:id="@+id/detailedDescription"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:text="@string/pager_description"
                android:textColor="@color/view_pager_textColor"
                android:padding="@dimen/view_pager_text_padding"
                android:layout_marginRight="@dimen/view_pager_text_marginRight"
                android:textSize="@dimen/view_pager_description_size"/>


    </LinearLayout>

    </ScrollView>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingRight="@dimen/view_pager_FAB_padding_right"
        android:paddingBottom="@dimen/view_pager_FAB_padding_bottom"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true"
        fab:menu_icon="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
        fab:menu_colorNormal="@color/view_pager_main_FAB_color_normal"
        fab:menu_colorPressed="@color/view_pager_main_FAB_color_pressed"
        fab:menu_colorRipple="@color/view_pager_main_FAB_color_ripple">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook_icon"
            fab:fab_colorNormal="@color/view_pager_sec_FAB_color_normal"
            fab:fab_colorPressed="@color/view_pager_sec_FAB_color_pressed"
            fab:fab_size="mini"
            fab:fab_label="@string/share_facebook" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fav4"
            fab:fab_colorNormal="@color/transparent"
            fab:fab_colorPressed="@color/transparent"
            fab:fab_size="mini"
            fab:fab_label="@string/add_favorites" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/game_icon"
            fab:fab_colorNormal="@color/transparent"
            fab:fab_colorPressed="@color/transparent"
            fab:fab_size="mini"
            fab:fab_label="@string/play_game" />


    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>